--- a/css/general.css
+++ b/css/general.css
@@ -325,7 +325,6 @@ footer {
 		width: 20%;
 		margin-top: -24%;
 		margin-left: 2%;
-		padding-bottom: 7.5%;
 	}
 	
 	h1 {
@@ -364,17 +363,19 @@ footer {
 		margin: 0 0;
 		margin-top: -5%;
 		padding-bottom: 2%;
+		margin-left: 3%;
 		
-		text-align: center;
+		text-align: left;
 		color: black;
 		font-size: 3.5em;
 	}
 	
 	h4 {
 		display: block;
-		
-		margin-top: -3%;
+		margin-bottom: 6%;
+		margin-top: 0%;
 	}
+
 }
 
 @media only screen and (min-width: 69.5em) {
@@ -400,6 +401,61 @@ footer {
 	}
 }
 
+@media only screen and (min-width: 76.5em) {
+	
+	h1 {
+		display: none;
+	}
+	
+	h2 {
+		display: none;
+	}
+	
+	
+	h4 {
+		display: block;
+		font-size: 3.3em;
+		font-weight: lighter;
+		
+		margin-top: -7%;
+		margin-left: 15%;;
+		margin-right: 20%;
+	}
+	
+		p {
+		text-align: left;
+		margin-left: 15%;
+		font-size: 1.19em;
+		margin-top: -5%;
+	}
+	
+	.button {
+		display: none;
+	}
+	
+	.button2 {
+		display: block;
+		
+		margin-top: -49%;
+		margin-left: 76%;
+	}
+	
+	h3 {
+		margin-left: 15%;	
+		margin-top: -20%;
+	}
+	
+
+	
+	.video {
+		width: 70%;
+		margin-left: auto;
+		margin-right: auto;
+		
+	}
+	
+}
+
 @media only screen and (min-width: 81.25em) {
 	
 	h1 {
@@ -408,6 +464,23 @@ footer {
 	
 	h2 {
 		display: none;
+	}
+	
+	h4 {
+		display: block;
+		font-size: 3.7em;
+		font-weight: lighter;
+		
+		margin-top: -6%;
+		margin-left: 15%;;
+		margin-right: 20%;
+	}
+	
+	p {
+		text-align: left;
+		margin-left: 15%;
+		font-size: 1.19em;
+		margin-top: -5%;
 	}
 }
 
