--- a/css/general.css
+++ b/css/general.css
@@ -51,6 +51,7 @@ h3 {
 	display: none;
 }
 
+
 h4 {
 	display: none;
 }
@@ -205,6 +206,11 @@ footer {
 	margin: 0 0;
 	}
 	
+		h3 {
+		display: none;
+	}
+	
+	
 	h4 {
 		display: none;
 	}
@@ -242,6 +248,10 @@ footer {
 		margin-left: 2%;
 		margin-top: -3	%;
 		
+	}
+	
+	h3 {
+		display: none;
 	}
 	
 	h4 {
@@ -454,6 +464,36 @@ footer {
 		
 	}
 	
+		.carousel {
+		margin-right: 15%;
+		margin-left: 15%;
+	}
+	
+		.carousel-buttons {
+		position: absolute;
+		z-index: 1000;
+		margin-top: 50%;
+		margin-left: 2%;
+	
+	}
+	
+		hr.hline_color2 {
+		background:#4CD95A;
+		height:2px;
+		
+		margin-top: -10%;
+	}
+
+	footer {
+		padding-top: 1%;
+		margin-right: 20%;
+		margin-left: 15%;
+		
+	
+		font-size: 0.80em;
+		color: #167824;	
+}
+	
 }
 
 @media only screen and (min-width: 81.25em) {
@@ -573,7 +613,7 @@ footer {
 	h3 {
 		display: block;
 		
-		padding-top: 3%;
+		padding-top: 17%;
 		padding-bottom: 2%;
 		
 		text-align: right;
