--- a/css/general.css
+++ b/css/general.css
@@ -166,6 +166,10 @@ hr.hline_color {
 
 }
 
+.next:hover {
+	background-color:#8cb82b;
+}
+
 .previous {
    background: #3ead48;
    
@@ -177,9 +181,10 @@ hr.hline_color {
    -moz-border-radius: 10px;
    border-radius: 10px;
    
-   
+}
 
-
+.previous:hover {
+	background-color:#8cb82b;
 }
 
 
