--- a/css/general.css
+++ b/css/general.css
@@ -148,8 +148,12 @@ hr.hline_color {
 	color: #10B732;
 	
 	margin-top: 22%;
+	
 
 }
+
+:focus {outline:none;}
+::-moz-focus-inner {border:0;}
 
 .next {
    background: #3ead48;
